# esp32-rgb

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  rgb-controller.py  sdkconfig
led_strip_async/: idf_component.yml
led_strip_async/include/: led_strip.h
led_strip_async/interface/: led_strip_interface.h
led_strip_async/src/: led_strip_api.c  led_strip_rmt_dev.c  led_strip_spi_dev.c
main/: CMakeLists.txt  Kconfig.projbuild  esp32-rgb-main.c  http-server.c  idf_component.yml  index.html  network.c  network.h  rgb-network-types.h  style.css  wifi.c  wifi.h
nvs_wifi_connect/include/: nvs_wifi_connect.h
nvs_wifi_connect/source/: nvs_wifi_connect.c
rgbcontrol/: .gitignore  main.py
rgbcontrol/web/: index.html  style.css
